Fix dropdown z-index and background.

--- a/resources/assets/css/layouts/app-header.css
+++ b/resources/assets/css/layouts/app-header.css
@@ -26,7 +26,7 @@
     }
 
     > .dropdown {
-        @apply .list-reset .absolute .pin-r .text-14 .border .rounded-sm .w-user-nav .shadow-lg;
+        @apply .list-reset .absolute .pin-r .text-14 .border .rounded-sm .w-user-nav .shadow-lg .bg-white .z-50;
 
         top: 100%;
     }
